@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - new test added to track down encoding errors in other author
+            modules, with the help of cpantesters
 
 0.007     2013-08-20 01:54:44Z (Karen Etheridge)
           - further simplified the build templating code, to take advantage of
